--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -15,3 +15,11 @@
     padding-left: 5vw;
     padding-right: 5vw;
 }
+
+.blog-content-share-sns {
+    padding-top: 3rem;
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
