docs を wiki へのリンクに変更

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -16,6 +16,10 @@
     padding-right: 5vw;
 }
 
+.ps-1 {
+    padding-left: 0.25rem!important;
+}
+
 .blog-content-share-sns {
     padding-top: 3rem;
     max-width: 80%;
