--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -27,3 +27,49 @@
     flex-direction: column;
     align-items: flex-end;
 }
+
+.lp-timelines {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.lp-twitter-timeline {
+    display: inline-block;
+    padding: inherit !important;
+    display: inline-block; 
+    background-color: #202225; 
+    border-radius: 0px 0px 5px 5px; 
+    min-width: 320px; 
+    min-height: 480px;
+    > header {
+        display: flex; 
+        align-items: center; 
+        justify-content: space-between; 
+        background-color: rgb(29, 155, 240); 
+        color: white; 
+        border-radius: 5px 5px 0px 0px; 
+        height: 74px;
+        padding: 20px;
+        > label {
+            display: flex; 
+            align-items: center;
+            margin: 0px;
+            font-size: 16px;
+            font-weight: bold;
+            &::before {
+                @extend .fab;
+                @extend .fa-twitter;
+                font-size: 24px;
+                margin-right: 8px;
+            }
+        }
+        > a {
+            color: #ffffff;
+            transition: 0.2s;
+            &:hover {
+                color: #d3d3d3;
+            }
+        }
+    }
+}
