--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -2,6 +2,7 @@ $primary: #073763;
 $secondary: #00628c;
 $success: #14B386;
 $info: #c6d7f1;
+$info: #93a1b5;
 $warning: #d9a21b;
 $danger: #945060;
 $light: #e0f1ff;
