--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -8,7 +8,7 @@ $danger: #945060;
 $light: #e0f1ff;
 $dark: #384047;
 
-$white: #f0f0f3;
+$white: #f3f3fd;
 $black: #222;
 
 $code-color: shade-color($secondary, 40%);
