fix twitter timeline height

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -68,8 +68,8 @@
     display: inline-block;
     background-color: #202225;
     border-radius: 5px;
-    min-width: 320px;
-    min-height: 480px;
+    width: 320px;
+    height: 480px;
     > header {
         display: flex;
         align-items: center;
